# ZAILON

./: CHANGELOG.md  README.md  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.github/scripts/: check-gamebanana-api.mjs  run-native-tests.py
.github/workflows/: deploy.yml  ios.yml  release.yml  verify-native.yml  verify.yml
docs/: GITHUB_PAGES.md  IOS_SIGNING.md  UPDATES.md  bulk-profile-fivem-ui-report.md  cyberpunk-mo2-style-import-repair.md  example-managers-analysis.md  explorer-provider-contracts.md  liquid-glass-reference-analysis.md  mod-deployment-architecture.md  nexus-collections-installation-report.md  nexus-grid-and-secure-import-report.md  nexus-pagination-fix-report.md  profiles-and-imports.md  provider-api-inventory.md  ui-reference-analysis.md
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/: GameContextMenu.tsx  GameResourcesDialog.tsx  SteamDetectionDialog.tsx  SupportModal.tsx  UpdateProvider.tsx
src/components/Explorer/: ProviderExplorer.tsx
src/components/Layout/: AppWindow.tsx  Sidebar.tsx  StatusBar.tsx  TitleBar.tsx
src/components/UI/: ModCard.tsx
src/components/Views/: DownloadsView.tsx  ExploreView.tsx  GamesView.tsx  HomeView.tsx  NewsView.tsx  SettingsView.tsx  ToolsView.tsx
src/config/: creatorLinks.ts
src/lib/: explorerProviders.ts  modCategories.ts  native.ts  windowEffects.ts
src/store/: gamebanana.ts  useStore.ts
src/types/: index.ts
src/utils/: index.ts
