[package]
name = "zailon"
version = "1.1.1"
description = "Universal Mod Launcher"
authors = ["N7T0-OF"]
license = "MIT"
repository = "https://github.com/N7T0-OF/ZAILON"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "zailon_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2" }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-process = "2"
tauri-plugin-updater = "2"
tauri-plugin-window-state = "2"
dirs = "6"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
walkdir = "2"
zip = "2"
url = "2"
steamlocate = "2.1"
